--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1><%= @restaurant.name %></h1>
-  <p><%= restaurant.address %></p>
+  <p><%= @restaurant.address %></p>
 
   <h3>Reviews</h3>
   <% @restaurant.reviews.each do |review| %>
